--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "typescript": "^4.8.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
