--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "styled-components": "^5.3.5",
     "typescript": "^4.8.2"
   },
   "scripts": {
